--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@editorjs/table": "^2.2.1",
     "@hookform/resolvers": "^3.1.0",
     "@next-auth/prisma-adapter": "^1.0.6",
+    "@photo-sphere-viewer/core": "^5.12.1",
+    "@photo-sphere-viewer/gyroscope-plugin": "^5.12.1",
     "@prisma/client": "^4.13.0",
     "@radix-ui/react-accessible-icon": "^1.0.2",
     "@radix-ui/react-accordion": "^1.1.1",
