--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "@editorjs/table": "^2.2.1",
     "@hookform/resolvers": "^3.1.0",
     "@next-auth/prisma-adapter": "^1.0.6",
-    "@photo-sphere-viewer/core": "^5.12.1",
-    "@photo-sphere-viewer/gyroscope-plugin": "^5.12.1",
+    "@photo-sphere-viewer/core": "5.9.0",
+    "@photo-sphere-viewer/gyroscope-plugin": "5.9.0",
+    "@photo-sphere-viewer/markers-plugin": "5.9.0",
     "@prisma/client": "^4.13.0",
     "@radix-ui/react-accessible-icon": "^1.0.2",
     "@radix-ui/react-accordion": "^1.1.1",
@@ -83,6 +84,7 @@
     "react-dom": "^18.2.0",
     "react-editor-js": "^2.1.0",
     "react-hook-form": "^7.43.9",
+    "react-photo-sphere-viewer": "^6.0.1",
     "react-textarea-autosize": "^8.4.1",
     "sharp": "^0.31.3",
     "shiki": "^0.11.1",
