--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@photo-sphere-viewer/core": "5.9.0",
     "@photo-sphere-viewer/gyroscope-plugin": "5.9.0",
     "@photo-sphere-viewer/markers-plugin": "5.9.0",
+    "@photo-sphere-viewer/virtual-tour-plugin": "5.9.0",
     "@prisma/client": "^4.13.0",
     "@radix-ui/react-accessible-icon": "^1.0.2",
     "@radix-ui/react-accordion": "^1.1.1",
